# micro-cli-args

./: README.md  pyproject.toml  setup.py
.pytest_cache/v/cache/: nodeids
micro_cli_args/: __init__.py  core.py
tests/: test_micro_cli_args.py
